Add unread notification count
